modules/gdscript/tests/scripts/parser/errors/assignment_3_equal_signs.gd
func test():
	var hello === "world"
